# unimrcp_experiments

./: Dockerfile  README.md  UniRecog.py  UniSynth.py  build_image.sh  devjournal  prepare_unimrcp_and_swig-wrapper.sh  start_container.sh  tmux_session.yml  unimrcp_dev.yml
minimal_app/: CMakeLists.txt  main.c
